--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
- <body>
-    
- </body>
+    <body>
+        <header>
+            <a href="./index.html">WebStudio</a>
+            <nav>
+                <ul>
+                        <li><a href="./Studio">Studio</a>
+                        </li>
+                        <li><a href="./Portfolio">Portfolio</a>
+                        </li>
+                        <li><a href="./Contacts">Contacts</a>
+                        </li>
+                    </ul>
+            </nav>    
+            <address>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+11(000)111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </header>
+        <main>
+            <section>
+                <h1>Effective Solutionsfor Your Business</h1>
+                <button type="button">WebStudio</button>
+            </section>
+            <section>
+                <h2></h2>
+            </section>
+            <section>
+            <h2>Our Team</h2>
+                <ul>
+                    <li><img src="./images/foto-Mark.jpg"
+                        alt="Mark Guerrero" 
+                        width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                    </li>
+                    <li><img src="./images/foto-Tom.jpg"
+                        alt="Tom Ford" 
+                        width="264">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                    </li>
+                    <li><img src="./images/foto-Camila.jpg"
+                        alt="Camila Garcia"
+                        width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                    </li>
+                    <li><img src="./images/foto-Daniel.jpg"
+                        alt="Daniel Wilson"
+                        width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <a href="./index.html">WebStudio</a>
+            <p>Increase the flow of customers and sales for your 
+            business with digital marketing & growth solutions.</p>
+        </footer>
+        
+    </body>
 </html>
