--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
 </head>
-<body>
+    <body>
         <header>
             <nav>
             <a href="./index.html">WebStudio</a>
@@ -61,18 +61,15 @@
                 <ul>
                     <li>
                         <img src="./images/foto-monitor.jpg" alt="monitor"
-                        width="360"
-                        height="300">
+                        width="360">
                     </li>
                     <li>
                         <img src="./images/foto-messenger.jpg" alt="messenger on phone"
-                        width="360"
-                        height="300">
+                        width="360">
                     </li>
                     <li>
                         <img src="./images/foto-fhone.jpg" alt="phone"
-                        width="360"
-                        height="300">
+                        width="360">
                     </li>
                 </ul>
             </section>
@@ -81,29 +78,25 @@
                 <ul>
                     <li><img src="./images/foto-Mark.jpg"
                         alt="Mark Guerrero" 
-                        width="264"
-                        height="260">
+                        width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                     </li>
                     <li><img src="./images/foto-Tom.jpg"
                         alt="Tom Ford" 
-                        width="264"
-                        height="260">
+                        width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                     </li>
                     <li><img src="./images/foto-Camila.jpg"
                         alt="Camila Garcia"
-                        width="264"
-                        height="260">
+                        width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                     </li>
                     <li><img src="./images/foto-Daniel.jpg"
                         alt="Daniel Wilson"
-                        width="264"
-                        height="260">
+                        width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                     </li>
@@ -116,5 +109,5 @@
             business with digital marketing & growth solutions.</p>
         </footer>
         
-</body>
+    </body>
 </html>
