--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <nav>
-            <a href="./index.html">WebStudio</a>
+                <a href="./index.html">WebStudio</a>
                 <ul>
                     <li><a href="./Studio">Studio</a>
                     </li>
@@ -22,17 +22,17 @@
             <address>
                 <ul>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+11(000)111111">+11 (000) 111-11-11</a></li>
+                    <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </header>
         <main>
             <section>
                 <h1>Effective Solutionsfor Your Business</h1>
-                <button type="button">WebStudio</button>
+                <button type="button">Order Service</button>
             </section>
             <section>
-                <h2>Success criteria</h2>
+                <h2 hidden>Success criteria</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -61,44 +61,55 @@
                 <ul>
                     <li>
                         <img src="./images/foto-monitor.jpg" alt="monitor"
-                        width="360">
+                        width="360"
+                        height="300">
                     </li>
                     <li>
                         <img src="./images/foto-messenger.jpg" alt="messenger on phone"
-                        width="360">
+                        width="360"
+                        height="300">
                     </li>
                     <li>
                         <img src="./images/foto-fhone.jpg" alt="phone"
-                        width="360">
+                        width="360"
+                        height="300">
                     </li>
                 </ul>
             </section>
             <section>
             <h2>Our Team</h2>
                 <ul>
-                    <li><img src="./images/foto-Mark.jpg"
+                    <li>
+                        <img src="./images/foto-Mark.jpg"
                         alt="Mark Guerrero" 
-                        width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                        width="264"
+                        height="260">
+                        <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
                     </li>
-                    <li><img src="./images/foto-Tom.jpg"
+                    <li>
+                        <img src="./images/foto-Tom.jpg"
                         alt="Tom Ford" 
-                        width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                        width="264"
+                        height="260">
+                        <h3>Tom Ford</h3>
+                        <p>Frontend Developer</p>
                     </li>
-                    <li><img src="./images/foto-Camila.jpg"
+                    <li>
+                        <img src="./images/foto-Camila.jpg"
                         alt="Camila Garcia"
-                        width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                        width="264"
+                        height="260">
+                        <h3>Camila Garcia</h3>
+                        <p>Marketing</p>
                     </li>
-                    <li><img src="./images/foto-Daniel.jpg"
+                    <li>
+                        <img src="./images/foto-Daniel.jpg"
                         alt="Daniel Wilson"
-                        width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                        width="264"
+                        height="260">
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
                     </li>
                 </ul>
             </section>
