--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             <nav>
                 <a href="./index.html">WebStudio</a>
                 <ul>
-                    <li><a href="./Studio">Studio</a>
+                    <li><a href="./index.html">Studio</a>
                     </li>
-                    <li><a href="./Portfolio">Portfolio</a>
+                    <li><a href="./index.html">Portfolio</a>
                     </li>
-                    <li><a href="./Contacts">Contacts</a>
+                    <li><a href="./index.html">Contacts</a>
                     </li>
                 </ul>
             </nav>    
