--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <nav>
                 <a href="./index.html">WebStudio</a>
                 <ul>
-                    <li><a href="./">Studio</a></li>
-                    <li><a href="./">Portfolio</a></li>
-                    <li><a href="./">Contacts</a></li>
+                    <li><a href="./index.html">Studio</a></li>
+                    <li><a href="./portfolio">Portfolio</a></li>
+                    <li><a href="./contacts">Contacts</a></li>
                 </ul>
             </nav>    
             <address>
@@ -25,8 +25,7 @@
         </header>
         <main>
             <section>
-                <h1>Effective Solutions
-                    for Your Business</h1>
+                <h1>Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
             <section>
