--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/foto-monitor.jpg" alt="monitor"
+                        <img src="./images/platforms/foto-monitor.jpg" alt="monitor"
                         width="360"
                         height="300">
                     </li>
                     <li>
-                        <img src="./images/foto-messenger.jpg" alt="messenger on phone"
+                        <img src="./images/platforms/foto-messenger.jpg" alt="messenger on phone"
                         width="360"
                         height="300">
                     </li>
                     <li>
-                        <img src="./images/foto-fhone.jpg" alt="phone"
+                        <img src="./images/platforms/foto-phone.jpg" alt="phone"
                         width="360"
                         height="300">
                     </li>
@@ -77,7 +77,7 @@
             <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="./images/foto-Mark.jpg"
+                        <img src="./images/team/mark-guerrero.jpg"
                         alt="Mark Guerrero" 
                         width="264"
                         height="260">
@@ -85,7 +85,7 @@
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/foto-Tom.jpg"
+                        <img src="./images/team/tom-ford.jpg"
                         alt="Tom Ford" 
                         width="264"
                         height="260">
@@ -93,7 +93,7 @@
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/foto-Camila.jpg"
+                        <img src="./images/team/camila-garcia.jpg"
                         alt="Camila Garcia"
                         width="264"
                         height="260">
@@ -101,7 +101,7 @@
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/foto-Daniel.jpg"
+                        <img src="./images/team/daniel-wilson.jpg"
                         alt="Daniel Wilson"
                         width="264"
                         height="260">
