--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/platforms/foto-monitor.jpg" alt="monitor"
+                        <img src="./images/platforms/foto-monitor.jpg" alt="computer monitor"
                         width="360"
                         height="300">
                     </li>
                     <li>
-                        <img src="./images/platforms/foto-messenger.jpg" alt="messenger on phone"
+                        <img src="./images/platforms/foto-messenger.jpg" alt="message in the app"
                         width="360"
                         height="300">
                     </li>
