--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/platforms/foto-monitor.jpg" alt="monitor"
+                        <img src="./images/platforms/img 1.jpg" alt="monitor"
                         width="360"
                         height="300">
                     </li>
                     <li>
-                        <img src="./images/platforms/foto-messenger.jpg" alt="message"
+                        <img src="./images/platforms/img 2.jpg" alt="message"
                         width="360"
                         height="300">
                     </li>
                     <li>
-                        <img src="./images/platforms/foto-phone.jpg" alt="phone"
+                        <img src="./images/platforms/img 3.jpg" alt="phone"
                         width="360"
                         height="300">
                     </li>
