--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
     <body>
         <header>
@@ -25,7 +26,7 @@
         </header>
         <main>
             <section>
-                <h1>Effective Solutions for Your Business</h1>
+                <h1>Effective Solutions<br />for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
             <section>
@@ -116,6 +117,5 @@
             <p>Increase the flow of customers and sales for your 
             business with digital marketing & growth solutions.</p>
         </footer>
-        
-    </body>
+        </body>
 </html>
